--- a/samples/videorecording/app/src/main/res/values/strings.xml
+++ b/samples/videorecording/app/src/main/res/values/strings.xml
@@ -15,5 +15,5 @@
    limitations under the License.
 -->
 <resources>
-    <string name="app_name">VideoRecording Sample</string>
+    <string name="app_name">Video Recording</string>
 </resources>
